# python_doc_sphinx

./: README.md  main.py  pyproject.toml
source/: conf.py  index.rst
